# ai-pm-portfolio

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: execution-quality-copilot-spec.md  pre-trade-risk-rules-assistant-spec.md
docs/architecture/: overview.md
docs/exchange-connectivity-hub/: exchange-connectivity-hub-spec.md  lin137-cp-sweep.md
docs/linear/templates/: bug-report.md  enhancement.md  new-issue.md  new-project.md  subtask.md
docs/superpowers/plans/: 2026-06-13-exchange-connectivity-hub.md  2026-06-14-execution-quality-copilot.md  2026-06-14-lin-137-reranker-tuning.md  2026-06-14-pre-trade-risk-rules-assistant.md
docs/superpowers/specs/: 2026-06-13-exchange-connectivity-hub-design.md  2026-06-14-lin-137-reranker-tuning-design.md
projects/exchange-connectivity-hub/: .env.example  .gitignore  Makefile  README.md  config.yaml  pyproject.toml
projects/exchange-connectivity-hub/.githooks/: pre-push
projects/exchange-connectivity-hub/data/: doc_registry.json
projects/exchange-connectivity-hub/evals/: golden_dataset.json  run_eval.py
projects/exchange-connectivity-hub/src/: __init__.py
projects/exchange-connectivity-hub/src/exchange_connectivity_hub/: __init__.py  config.py
projects/exchange-connectivity-hub/src/exchange_connectivity_hub/api/: __init__.py  main.py
projects/exchange-connectivity-hub/src/exchange_connectivity_hub/ingest/: __init__.py  __main__.py  chunker.py  doc_registry.py  embedder.py  loader.py  pipeline.py  update_checker.py
projects/exchange-connectivity-hub/src/exchange_connectivity_hub/retrieval/: __init__.py  hybrid_retriever.py  query_expansion.py  rag_chain.py  reranker.py  retriever.py
projects/exchange-connectivity-hub/src/exchange_connectivity_hub/ui/: __init__.py  app.py
projects/exchange-connectivity-hub/tests/: __init__.py
projects/exchange-connectivity-hub/tests/integration/: __init__.py  test_api.py  test_pipeline.py  test_rag_chain.py
projects/exchange-connectivity-hub/tests/unit/: __init__.py  test_chunker.py  test_config.py  test_doc_registry.py  test_embedder.py  test_eval_filter.py  test_eval_overrides.py  test_hybrid_retriever.py  test_loader.py  test_query_expansion.py  test_reranker.py  test_retriever.py  test_smoke.py  test_update_checker.py
projects/execution-quality-copilot/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
projects/execution-quality-copilot/docs/: tool-design-notes.md
projects/execution-quality-copilot/evals/: __init__.py  golden_questions.json  run_eval.py
projects/execution-quality-copilot/src/: __init__.py
projects/execution-quality-copilot/src/execution_quality_copilot/: __init__.py  config.py  db.py  llm.py  models.py
projects/execution-quality-copilot/src/execution_quality_copilot/datagen/: __init__.py  __main__.py  generate.py
projects/execution-quality-copilot/src/execution_quality_copilot/server/: main.py
projects/execution-quality-copilot/src/execution_quality_copilot/server/tools/: __init__.py  benchmarks.py  fills.py  tca.py
projects/execution-quality-copilot/tests/: __init__.py  conftest.py
projects/execution-quality-copilot/tests/unit/: test_config.py  test_db.py  test_eval.py  test_generate.py  test_llm.py  test_models.py  test_server.py  test_smoke.py  test_tool_benchmarks.py  test_tool_fills.py  test_tool_tca.py
projects/pre-trade-risk-rules-assistant/: .gitignore  .secrets.baseline  Makefile  README.md  config.yaml  pyproject.toml
projects/pre-trade-risk-rules-assistant/evals/: __init__.py  golden_rules.json  run_eval.py
projects/pre-trade-risk-rules-assistant/src/pre_trade_risk_rules_assistant/: __init__.py  graph.py  lints.py  llm.py  state.py  store.py
projects/pre-trade-risk-rules-assistant/src/pre_trade_risk_rules_assistant/api/: main.py
projects/pre-trade-risk-rules-assistant/src/pre_trade_risk_rules_assistant/nodes/: __init__.py  corrector.py  explainer.py  generator.py  parser.py  validator.py
projects/pre-trade-risk-rules-assistant/src/pre_trade_risk_rules_assistant/schemas/: __init__.py  rules.py
projects/pre-trade-risk-rules-assistant/src/pre_trade_risk_rules_assistant/ui/: app.py
projects/pre-trade-risk-rules-assistant/tests/: __init__.py
projects/pre-trade-risk-rules-assistant/tests/integration/: __init__.py  test_api.py  test_graph.py
projects/pre-trade-risk-rules-assistant/tests/unit/: __init__.py  test_config.py  test_corrector_node.py  test_eval.py  test_explainer_node.py  test_generator_node.py  test_lints.py  test_llm.py  test_parser_node.py  test_schemas.py  test_store.py  test_validator_node.py
shared/: __init__.py
src/exchange_connectivity_hub/: __init__.py
src/exchange_connectivity_hub/api/: __init__.py
src/exchange_connectivity_hub/ingest/: __init__.py
src/exchange_connectivity_hub/retrieval/: __init__.py
src/exchange_connectivity_hub/ui/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_smoke.py
